--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,23 @@ platform = espressif32
 board = adafruit_qtpy_esp32s3_n4r2
 framework = arduino
 lib_deps = 
-	adafruit/Adafruit BusIO
 	stm32duino/STM32duino VL53L4CD@^1.0.3
+	adafruit/Adafruit NeoPixel@^1.12.2
+
+[env:adafruit_qtpy_esp32s2]
+platform = espressif32
+board = adafruit_qtpy_esp32s2
+framework = arduino
+lib_ldf_mode = deep
+lib_deps = 
+	stm32duino/STM32duino VL53L4CD@^1.0.3
+	adafruit/Adafruit NeoPixel@^1.12.2
+
+[env:adafruit_matrix_portal_m4]
+platform = atmelsam
+board = adafruit_matrix_portal_m4
+framework = arduino
+lib_ldf_mode = deep
+lib_deps = 
 	adafruit/Adafruit APDS9960 Library@^1.3.0
+	adafruit/Adafruit NeoPixel@^1.12.2
