both l4cd and apds working simultaneously

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,9 +4,9 @@ board = adafruit_qt_py_m0
 framework = arduino
 lib_ldf_mode = deep
 lib_deps = 
+	stm32duino/STM32duino VL53L4CD@^1.0.3
 	adafruit/Adafruit APDS9960 Library@^1.3.0
 	adafruit/Adafruit NeoPixel@^1.12.2
-
 
 ; [env:adafruit_qtpy_esp32s3_n4r2]
 ; platform = espressif32
